--- a/src/index.css
+++ b/src/index.css
@@ -47,13 +47,18 @@ button:focus-visible {
 
 
 .cards {
+  margin-top: 40px;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 20px;
+
 }
 .card {
-  background-color: aliceblue;
+  background-color: rgba(255, 255, 255, .15);
+  backdrop-filter: blur(7px);
+
   color: #333;
+  border-radius: 7px;
 
 
 }
@@ -62,4 +67,22 @@ button:focus-visible {
   width: 100%;
   max-height: 300px;
 }
+
+nav ul li {
+  display: inline-block;
+  margin: 30px;}
+
+
+.searchbar {
+  padding: 10px;
+  width: 220px;
+}
+
+img {
+  border-top-right-radius: 7px;
+  border-top-left-radius: 7px;
+ 
+}
+
+
 
