--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,6 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
@@ -109,4 +107,7 @@ img {
  
 }
 
+footer {
 
+  position: calc(100vh - 10px);
+}
